<resources>
    <string name="app_name">Test</string>
    <string name="distancia">Distância</string>
    <string name="total_quilometros">Total de quilômetros</string>
    <string name="preco">Preço</string>
    <string name="autonomia">Autonomia</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="gasto_total">Seu gasto total será de:</string>
    <string name="calcular">CALCULAR</string>
    <string name="valor_total_reais">R$0</string>
    <string name="preencha_todos_campos">Você deve preencher todos os campos!</string>
    <string name="informe_valores_validos">Você deve informar valores válidos!</string>
</resources>